updated download now button

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
 
                 <!--Call to Action-->
-                <a href="#" class="button">DOWNLOAD NOW</a>
+                <a href="https://github.com/OptiCut/OptiCut" class="button">DOWNLOAD NOW</a>
                 <!--End Call to Action-->
 
             </div>
