--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
 
-            <p id="copyright" class="col-2">&copy; 2024 OptiCut. All rights reserved.</a></p>
+            <p id="copyright" class="col-2"> &copy; MIT License. Created by OptiCut 2024</a></p>
 
             <!--Social Icons in Footer-->
             <!--End of Social Icons in Footer-->
