Update color themse and banner image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!--Page Title-->
-    <title>OptiCut - Fusion 360 Plugin for Flawless Cuts</title>
+    <title>OptiCut - Fusion 360 Plugin for Better Cuts</title>
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
@@ -109,7 +109,7 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>Fusion 360 Plugin for Flawless Cuts</h1>
+                    <h1>Fusion 360 Plugin for Better Cuts</h1>
                     <h2>Cutlist layout plugin for Fusion360. Developed specifically for woodworkers.
                         Plugin uses information in Fusion360 design bodies and lays them out on stock wood materials</h2>
                 </div>
@@ -238,8 +238,8 @@
                 <div class="col-3">
                     <!--User Testimonial-->
                     <blockquote class="testimonial text-right bigtest">
-                        <q>OptiCut is an absolute game-changer for woodworking enthusiasts like myself. This tool not only streamlines the entire woodcutting process but elevates the quality of the end product exponentially.</q>
-                        <footer>— Cuong Dinh, Happy Customer</footer>
+                        <q>OptiCut is an absolute game-changer for woodworking enthusiasts like ourselves. This tool not only streamlines the entire woodcutting process but elevates the quality of the end product exponentially.</q>
+                        <footer>— OptiCut</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
 
